# inverseops

./: .dockerignore  .gitignore  DECISIONS.md  EVALUATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
artifacts/baseline/: baseline_metrics.csv  baseline_summary.csv  day3_decision.json
artifacts/compare_finetuned/: baseline_summary.csv  compare_summary.csv  day3_decision.json  finetuned_full_metrics.csv  finetuned_sigma50_metrics.csv  specialization_summary.json
artifacts/sr_eval/: w2s_swinir_sr_2x.json
configs/: denoise_nafnet_sigma25.yaml  denoise_swinir.yaml  denoise_swinir_realnoise.yaml  ixi_denoise_swinir.yaml  sr_swinir_2x.yaml  w2s_denoise_nafnet.yaml  w2s_denoise_swinir.yaml  w2s_sr_swinir_2x.yaml
docker/: Dockerfile  Dockerfile.train  docker-compose.yaml  grafana_dashboard.json  prometheus.yaml
docs/: README.md  tradeoffs.md
inverseops/: __init__.py  config.py
inverseops/data/: __init__.py  base.py  degradations.py  ixi.py  microscopy.py  microscopy_real.py  splits.json  torch_datasets.py  transforms.py  (+1 more)
notebooks/: train_colab.ipynb
preflight/: 2026-04-12-sr-swinir-2x.txt
scripts/: README.md  download_data.sh  download_ixi.py  download_w2s.py  modal_calibration.py  modal_eval.py  modal_eval_ixi.py  modal_eval_retrained.py  modal_generate_figure.py  modal_generate_ixi_figure.py  modal_generate_sr_figure.py  modal_hash_file.py  modal_read_file.py  modal_sr_calibration.py  modal_sr_data_check.py  modal_sr_dataset_check.py  modal_sr_eval_swinir.py  modal_sr_rmse_sanity.py  modal_train.py  preflight.py  run_evaluation.py  run_latency_bench.py  run_onnx_export.py  run_training.py  save_sample_degradations.py
tests/: __init__.py  test_data.py  test_evaluation.py  test_evaluation_harness.py  test_imports.py  test_ixi.py  test_logging.py  test_metrics.py  test_nafnet.py  test_real_noise.py  test_registry.py  test_schemas.py  test_serving.py  test_serving_sr.py  test_sr_stitching.py  test_swinir_metadata.py  test_swinir_sr.py  test_tracking.py  test_training.py  test_w2s.py
(+30 files in other folders)
